<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="wang.relish.android7.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/what_is_new_in_api24"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="goMultiWindowPlaygroundSample"
            android:text="@string/multi_window_sample"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="goActiveNotificationsSample"
            android:text="@string/active_notifications_sample" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="goMessagingServiceSample"
            android:text="@string/messaging_service_sample" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="goDirectBootSample"
            android:text="@string/direct_boot_sample" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="goScopedDirectoryAccessSample"
            android:text="@string/scoped_directory_access_sample" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="goShortcutsSample"
            android:text="@string/shortcuts_sample"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="goQuickSettingSample"
            android:text="@string/quick_setting_sample"
            android:textAllCaps="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:minHeight="48dp"
                android:text="@string/about"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tv"
                android:contentDescription="@string/github"
                android:gravity="center"
                android:onClick="goGitHub"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:scaleType="matrix"
                android:src="@drawable/github" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>