<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_window_sample"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/warning_multiwindow_disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/warning_of_multi_window"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_start_unresizable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="onStartUnresizableActivity"
            android:text="@string/start_unresizable"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_start_adjacent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="onStartAdjacentActivity"
            android:text="@string/start_adjacent"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_drag_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="0dp"
                android:layout_weight="6"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:hint="@string/drag_data_hint"
                android:minHeight="48dp"
                android:text="@string/drag_data"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:onClick="add"
                android:text="@string/add"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
